--- a/.github/workflows/TWRP Recovery builder.yml
+++ b/.github/workflows/TWRP Recovery builder.yml
@@ -13,7 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp.git -b twrp-11
+  MANIFEST: https://github.com/minimal-manifest-twrp/platform_manifest_twrp_aosp
   DEVICE: KE5
   DT_LINK: https://github.com/Tophub12/device_tecno_ke5
   DT_PATH: device/tecno/KE5
